Fixing TOOLS-961
git-svn-id: https://svn.wso2.org/repos/wso2/trunk/tools@124993 a5903396-d722-0410-b921-86c7d4935375