@@ -17,43 +17,47 @@
 package org.wso2.developerstudio.eclipse.artifact.jaxws.ui.wizard;
 
 import java.io.BufferedReader;
+import java.io.ByteArrayInputStream;
 import java.io.File;
 import java.io.IOException;
 import java.io.InputStreamReader;
 import java.lang.reflect.InvocationTargetException;
+import java.util.Map;
 
+import org.eclipse.core.resources.IFile;
 import org.eclipse.core.resources.IFolder;
 import org.eclipse.core.resources.IProject;
 import org.eclipse.core.resources.IResource;
 import org.eclipse.core.runtime.CoreException;
 import org.eclipse.core.runtime.IProgressMonitor;
 import org.eclipse.core.runtime.NullProgressMonitor;
+import org.wso2.developerstudio.eclipse.artifact.jaxws.Activator;
 import org.wso2.developerstudio.eclipse.artifact.jaxws.model.JaxwsModel;
+import org.wso2.developerstudio.eclipse.artifact.jaxws.utils.JaxUtil;
 import org.wso2.developerstudio.eclipse.artifact.jaxws.utils.JaxWSImageUtils;
+import org.wso2.developerstudio.eclipse.logging.core.IDeveloperStudioLog;
+import org.wso2.developerstudio.eclipse.logging.core.Logger;
 import org.wso2.developerstudio.eclipse.platform.ui.wizard.AbstractWSO2ProjectCreationWizard;
-import org.wso2.developerstudio.eclipse.platform.ui.wizard.pages.ProjectOptionsPage;
 import org.wso2.developerstudio.eclipse.utils.jdt.JavaUtils;
 import org.wso2.developerstudio.eclipse.utils.project.ProjectUtils;
-import org.eclipse.jdt.core.IAnnotation;
-import org.eclipse.jdt.core.ICompilationUnit;
-import org.eclipse.jdt.core.IJavaElement;
 import org.eclipse.jdt.core.IJavaProject;
-import org.eclipse.jdt.core.IPackageFragment;
 import org.eclipse.jdt.core.IPackageFragmentRoot;
-import org.eclipse.jdt.core.IType;
 import org.eclipse.jdt.core.JavaCore;
-import org.eclipse.jdt.ui.JavaUI;
 import org.eclipse.jface.dialogs.ProgressMonitorDialog;
 import org.eclipse.jface.operation.IRunnableWithProgress;
 import org.eclipse.jface.viewers.IStructuredSelection;
-import org.eclipse.jface.wizard.IWizardPage;
-import org.eclipse.ui.IEditorPart;
 import org.eclipse.ui.IWorkbench;
+import org.eclipse.jdt.launching.IVMInstall;
+import org.eclipse.jdt.launching.JavaRuntime;
 
 public class JaxwsServiceCreationWizard  extends AbstractWSO2ProjectCreationWizard{
+	private static IDeveloperStudioLog log=Logger.getLog(Activator.PLUGIN_ID);
 	private JaxwsModel jaxwsModel;
 	IProject project;
 	IFolder sourceFolder;
+	IFolder webappFolder; 
+	IFolder webINF;
+	IFolder resourceFolder;
 	IJavaProject javaProject;
 	IPackageFragmentRoot root;
 	
@@ -73,51 +77,39 @@ public class JaxwsServiceCreationWizard  extends AbstractWSO2ProjectCreationWiza
 		try {
 			project = createNewProject();
 			sourceFolder =ProjectUtils.getWorkspaceFolder(project, "src", "main", "java");
+			webappFolder = ProjectUtils.getWorkspaceFolder(project, "src", "main", "webapp");
+			webINF = ProjectUtils.getWorkspaceFolder(project, "src", "main", "webapp","WEB-INF");
+			resourceFolder = ProjectUtils.getWorkspaceFolder(project, "src", "main", "resources");
 			javaProject = JavaCore.create(project);
 			root = javaProject.getPackageFragmentRoot(sourceFolder);
 			
 			JavaUtils.addJavaSupportAndSourceFolder(project, sourceFolder);
+			ProjectUtils.createFolder(webappFolder);
+			ProjectUtils.createFolder(webINF);
+			ProjectUtils.createFolder(resourceFolder);
+			IFile webXML = webINF.getFile("web.xml");
+			IFile cxfServletXML = webINF.getFile("cxf-servlet.xml");
+			webXML.create(new ByteArrayInputStream(JaxUtil.getCXFWebConfig().getBytes()), true, null);
+			JaxUtil.CxfServlet cxfServlet = new JaxUtil.CxfServlet();
+			cxfServletXML.create(new ByteArrayInputStream(cxfServlet.toString().getBytes()), true, null);
+			project.refreshLocal(IResource.DEPTH_INFINITE,new NullProgressMonitor());
+			cxfServlet = new JaxUtil.CxfServlet();
+			cxfServlet.deserialize(cxfServletXML);
+			
 			if (getModel().getSelectedOption().equals("new.jaxws")) {
-				if(jaxwsModel.isCreateClass()){
-					
-					String className = jaxwsModel.getServiceClass();
-					String PackageName = jaxwsModel.getClassPackage();
-					
-					IPackageFragment sourcePackage = root.createPackageFragment(PackageName, false, null);
-					StringBuffer buffer = new StringBuffer();
-					if(!PackageName.equalsIgnoreCase("")){
-					buffer.append("package " + PackageName + ";\n");
-					buffer.append("\n");
-					}
-					buffer.append("import javax.jws.WebService;\n");
-					buffer.append("import javax.jws.WebMethod;\n");
-					buffer.append("import javax.jws.WebParam;\n");
-					buffer.append("\n");
-					buffer.append("@WebService(serviceName = \"" + className + "\")\n" + "public class " + className +"{\n\n" );
-					buffer.append("\t/** This is a sample web service operation */\n");
-					buffer.append("\t@WebMethod(operationName = \"hello\")\n");
-					buffer.append("\tpublic String hello(@WebParam(name = \"name\") String txt) {\n");
-					buffer.append("\t\treturn \"Hello \" + txt + \" !\";\n");
-					buffer.append("\t}\n\n");
-					buffer.append("\n}");
-					ICompilationUnit cu = sourcePackage.createCompilationUnit(className+".java", buffer.toString(), false, null);
-					project.refreshLocal(IResource.DEPTH_INFINITE,new NullProgressMonitor());
-					try {
-						IEditorPart javaEditor = JavaUI.openInEditor(cu);
-						JavaUI.revealInEditor(javaEditor, (IJavaElement) cu);
-					} catch (Exception e) { /* ignore */}
-				}
+				
+				
 				} else if (getModel().getSelectedOption().equals("import.jaxwswsdl")) {
 				ProgressMonitorDialog progressMonitorDialog = new ProgressMonitorDialog(getShell());
 				progressMonitorDialog.create();
 				progressMonitorDialog.open();
-				progressMonitorDialog.run(false, false, new CodegenJob());
+				progressMonitorDialog.run(false, false, new CXFCodegenJob());
 				
 				project.refreshLocal(IResource.DEPTH_INFINITE,new NullProgressMonitor());
 			}
 
 			File pomfile = project.getFile("pom.xml").getLocation().toFile();
-//			getModel().getMavenInfo().setPackageName("service/jaxws");
+			getModel().getMavenInfo().setPackageName("war");
 			createPOM(pomfile);
 			ProjectUtils.addNatureToProject(project,
 			                                false,
@@ -125,18 +117,19 @@ public class JaxwsServiceCreationWizard  extends AbstractWSO2ProjectCreationWiza
 			getModel().addToWorkingSet(project);
 			project.refreshLocal(IResource.DEPTH_INFINITE, new NullProgressMonitor());
 
-		} catch (CoreException e) {
-			e.printStackTrace();
+		}  catch (CoreException e) {
+			log.error("CoreException has occurred", e);
 		} catch (IOException e) {
-			e.printStackTrace();
+			log.error("I/O error has occurred", e);
 		} catch (Exception e) {
-			e.printStackTrace();
+			log.error("An unexpected error has occurred", e);
 		}
 
 		return true;
 	}
 	
-	private class CodegenJob implements IRunnableWithProgress {
+	
+	private class CXFCodegenJob implements IRunnableWithProgress {
 
 		public void run(IProgressMonitor monitor)
 				throws InvocationTargetException, InterruptedException {
@@ -146,14 +139,35 @@ public class JaxwsServiceCreationWizard  extends AbstractWSO2ProjectCreationWiza
 			monitor.worked(10);
 			try {
 				monitor.subTask("Generating code...");
-				//IVMInstall vmInstall= JavaRuntime.getDefaultVMInstall();
+				IVMInstall vmInstall= JavaRuntime.getDefaultVMInstall();
 	            String s = null;
-
+	            String shell =null;
+	            String wsdl2java = null;
 		        String sourcePkg = jaxwsModel.getSourcePackage();
+		        String sourceDir = sourceFolder.getLocation().toFile().toString();
 				String wsdlFile = jaxwsModel.getImportFile().getAbsolutePath();
-	            
-	            String cmd = "wsimport -keep -Xnocompile -p " + sourcePkg + " " + wsdlFile;
-	            Process p = Runtime.getRuntime().exec(cmd,new String[]{},sourceFolder.getLocation().toFile());
+				String os = System.getProperty("os.name").toLowerCase();
+				ProcessBuilder pb=null;
+				
+				if(os.indexOf("win") >= 0){
+					shell = "cmd.exe /c";
+					wsdl2java = "wsdl2java.bat";
+				} else {
+					shell = "sh";
+					wsdl2java = "wsdl2java";
+				}
+				
+				if(sourcePkg!=null && sourcePkg.trim().length()>0){
+					pb = new ProcessBuilder(shell, wsdl2java, "-impl", "-server", "-p",sourcePkg, "-d",sourceDir,wsdlFile);
+				} else {
+					pb = new ProcessBuilder(shell, wsdl2java, "-impl", "-server", "-d",sourceDir,wsdlFile);
+				}
+				
+				 Map<String, String> env = pb.environment();
+				 env.put("CXF_HOME", jaxwsModel.getCXFRuntime());
+				 env.put("JAVA_HOME", vmInstall.getInstallLocation().toString());
+				 pb.directory(new File(jaxwsModel.getCXFRuntime() + File.separator + "bin" ));
+				 Process p = pb.start();
 	            
 	            BufferedReader stdInput = new BufferedReader(new InputStreamReader(p.getInputStream()));
 	            BufferedReader stdError = new BufferedReader(new InputStreamReader(p.getErrorStream()));
@@ -163,36 +177,19 @@ public class JaxwsServiceCreationWizard  extends AbstractWSO2ProjectCreationWiza
 	            }
 	            
 	            while ((s = stdError.readLine()) != null) {
-	                System.out.println(s);
+	            	log.error(s);
 	            }
 	            
 	            project.refreshLocal(IResource.DEPTH_INFINITE, new NullProgressMonitor());
 	            
 				monitor.worked(75);	
-				
-				IFolder sourceDir = sourceFolder.getFolder(sourcePkg.replace('.', '/'));
-				IPackageFragment jPackage = javaProject.findPackageFragment(sourceDir.getFullPath());
-				
-				  for (final ICompilationUnit compilationUnit : jPackage.getCompilationUnits()) {
-					  IType[] types = compilationUnit.getTypes();
-					  for(IType type: types){
-						  IAnnotation annotation = type.getAnnotation("WebService");
-						  System.out.println(type.getFullyQualifiedName());
-						  if (annotation.exists()) { 
-							  //TODO:
-						  }
-						  else{
-							  //TODO:
-						  }
-					  }
-				  }
 
 				monitor.worked(10);
 				monitor.subTask("Refreshing project...");
 				monitor.worked(5);
 				monitor.done();
 			} catch (Exception e) {
-				e.printStackTrace();
+				throw new InvocationTargetException(e);
 			}
 		}
 		
@@ -205,11 +202,6 @@ public class JaxwsServiceCreationWizard  extends AbstractWSO2ProjectCreationWiza
 	public JaxwsModel getJaxwsModel() {
 		return jaxwsModel;
 	}
-	
-	public void addPages() {
-		super.addPages();
-	}
-
 	
 	public IResource getCreatedResource() {
 		return null;
